tests/data/placebo/test_message_broker_vpc_default_filter/mq.DescribeBroker_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "AuthenticationStrategy": "simple",
        "AutoMinorVersionUpgrade": true,
        "BrokerArn": "arn:aws:mq:us-east-1:012345678910:broker:TestBroker6:b-494999bd-7800-4e0c-90e1-cab9873f515d",
        "BrokerId": "b-494999bd-7800-4e0c-90e1-cab9873f515d",
        "BrokerInstances": [
            {
                "ConsoleURL": "https://b-494999bd-7800-4e0c-90e1-cab9873f515d-1.mq.us-east-1.amazonaws.com:8162",
                "Endpoints": [
                    "ssl://b-494999bd-7800-4e0c-90e1-cab9873f515d-1.mq.us-east-1.amazonaws.com:61617",
                    "amqp+ssl://b-494999bd-7800-4e0c-90e1-cab9873f515d-1.mq.us-east-1.amazonaws.com:5671",
                    "stomp+ssl://b-494999bd-7800-4e0c-90e1-cab9873f515d-1.mq.us-east-1.amazonaws.com:61614",
                    "mqtt+ssl://b-494999bd-7800-4e0c-90e1-cab9873f515d-1.mq.us-east-1.amazonaws.com:8883",
                    "wss://b-494999bd-7800-4e0c-90e1-cab9873f515d-1.mq.us-east-1.amazonaws.com:61619"
                ],
                "IpAddress": "34.224.162.63"
            }
        ],
        "BrokerName": "TestBroker6",
        "BrokerState": "RUNNING",
        "Configurations": {
            "Current": {
                "Id": "c-f8c47430-b028-4ed4-9dc6-f255616f77ba",
                "Revision": 1
            },
            "History": []
        },
        "Created": {
            "__class__": "datetime",
            "year": 2021,
            "month": 3,
            "day": 12,
            "hour": 19,
            "minute": 44,
            "second": 17,
            "microsecond": 247000
        },
        "DeploymentMode": "SINGLE_INSTANCE",
        "EncryptionOptions": {
            "UseAwsOwnedKey": true
        },
        "EngineType": "ActiveMQ",
        "EngineVersion": "5.15.14",
        "HostInstanceType": "mq.m5.large",
        "Logs": {
            "Audit": false,
            "AuditLogGroup": "/aws/amazonmq/broker/b-494999bd-7800-4e0c-90e1-cab9873f515d/audit",
            "General": false,
            "GeneralLogGroup": "/aws/amazonmq/broker/b-494999bd-7800-4e0c-90e1-cab9873f515d/general"
        },
        "MaintenanceWindowStartTime": {
            "DayOfWeek": "WEDNESDAY",
            "TimeOfDay": "03:00",
            "TimeZone": "UTC"
        },
        "PubliclyAccessible": true,
        "SecurityGroups": [
            "sg-0d30141b566cfa039"
        ],
        "StorageType": "efs",
        "SubnetIds": [
            "subnet-068dfbf3f275a6ae8"
        ],
        "Tags": {},
        "Users": [
            {
                "Username": "testing"
            }
        ]
    }
}
