tests/data/placebo/test_message_broker_vpc_default_filter/mq.DescribeBroker_2.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "AuthenticationStrategy": "simple",
        "AutoMinorVersionUpgrade": true,
        "BrokerArn": "arn:aws:mq:us-east-1:012345678910:broker:TestBroker1:b-6f66b513-8060-435f-820b-de08fef5f328",
        "BrokerId": "b-6f66b513-8060-435f-820b-de08fef5f328",
        "BrokerInstances": [
            {
                "ConsoleURL": "https://b-6f66b513-8060-435f-820b-de08fef5f328-1.mq.us-east-1.amazonaws.com:8162",
                "Endpoints": [
                    "ssl://b-6f66b513-8060-435f-820b-de08fef5f328-1.mq.us-east-1.amazonaws.com:61617",
                    "amqp+ssl://b-6f66b513-8060-435f-820b-de08fef5f328-1.mq.us-east-1.amazonaws.com:5671",
                    "stomp+ssl://b-6f66b513-8060-435f-820b-de08fef5f328-1.mq.us-east-1.amazonaws.com:61614",
                    "mqtt+ssl://b-6f66b513-8060-435f-820b-de08fef5f328-1.mq.us-east-1.amazonaws.com:8883",
                    "wss://b-6f66b513-8060-435f-820b-de08fef5f328-1.mq.us-east-1.amazonaws.com:61619"
                ],
                "IpAddress": "54.89.145.43"
            }
        ],
        "BrokerName": "TestBroker1",
        "BrokerState": "RUNNING",
        "Configurations": {
            "Current": {
                "Id": "c-c66d658b-3949-40b0-8017-3fbf62767390",
                "Revision": 1
            },
            "History": []
        },
        "Created": {
            "__class__": "datetime",
            "year": 2021,
            "month": 4,
            "day": 6,
            "hour": 19,
            "minute": 16,
            "second": 20,
            "microsecond": 473000
        },
        "DeploymentMode": "SINGLE_INSTANCE",
        "EncryptionOptions": {
            "UseAwsOwnedKey": true
        },
        "EngineType": "ActiveMQ",
        "EngineVersion": "5.15.14",
        "HostInstanceType": "mq.t3.micro",
        "Logs": {
            "Audit": false,
            "AuditLogGroup": "/aws/amazonmq/broker/b-6f66b513-8060-435f-820b-de08fef5f328/audit",
            "General": false,
            "GeneralLogGroup": "/aws/amazonmq/broker/b-6f66b513-8060-435f-820b-de08fef5f328/general"
        },
        "MaintenanceWindowStartTime": {
            "DayOfWeek": "WEDNESDAY",
            "TimeOfDay": "18:00",
            "TimeZone": "UTC"
        },
        "PubliclyAccessible": true,
        "SecurityGroups": [
            "sg-6c7fa917"
        ],
        "StorageType": "efs",
        "SubnetIds": [
            "subnet-914763e7"
        ],
        "Tags": {},
        "Users": [
            {
                "Username": "test123"
            }
        ]
    }
}
