tests/data/placebo/test_message_broker_vpc_default_filter/mq.ListBrokers_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "BrokerSummaries": [
            {
                "BrokerArn": "arn:aws:mq:us-east-1:012345678910:broker:TestBroker6:b-494999bd-7800-4e0c-90e1-cab9873f515d",
                "BrokerId": "b-494999bd-7800-4e0c-90e1-cab9873f515d",
                "BrokerName": "TestBroker6",
                "BrokerState": "RUNNING",
                "Created": {
                    "__class__": "datetime",
                    "year": 2021,
                    "month": 3,
                    "day": 12,
                    "hour": 19,
                    "minute": 44,
                    "second": 17,
                    "microsecond": 247000
                },
                "DeploymentMode": "SINGLE_INSTANCE",
                "EngineType": "ActiveMQ",
                "HostInstanceType": "mq.m5.large"
            },
            {
                "BrokerArn": "arn:aws:mq:us-east-1:012345678910:broker:TestBroker5:b-8160e23b-f87a-448e-ac5e-d8015179f260",
                "BrokerId": "b-8160e23b-f87a-448e-ac5e-d8015179f260",
                "BrokerName": "TestBroker5",
                "BrokerState": "RUNNING",
                "Created": {
                    "__class__": "datetime",
                    "year": 2021,
                    "month": 3,
                    "day": 12,
                    "hour": 17,
                    "minute": 46,
                    "second": 6,
                    "microsecond": 312000
                },
                "DeploymentMode": "SINGLE_INSTANCE",
                "EngineType": "ActiveMQ",
                "HostInstanceType": "mq.m5.large"
            }
        ]
    }
}
